updated toggle menu

--- a/index.html
+++ b/index.html
@@ -9,14 +9,20 @@
     <link rel="stylesheet" href="./assets/fontawesome/css/all.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Exo+2:ital,wght@1,300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300&family=Poppins:ital,wght@0,600;1,400&family=Raleway:ital,wght@0,400;1,500&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="navbar-holder">
+    <div class="nav">
         <div class="logo">
             <a href="#"><img src="./assets/images/LogoMakr-76qr5p.png" alt="" srcset=""></a>
         </div>
+        <input type="checkbox" id="check">
+        <label for="check">
+            <i class="fa-solid fa-bars" id="btn"></i>
+            <i class="fa-solid fa-xmark" id="cancel"></i>
+        </label>
         <div class="menu">
+            <header></header>
             <a href="#"><i class="fa-solid fa-user"></i>about</a>
             <a href="#"><i class="fa-solid fa-clone"></i>services</a>
             <a href="#"><i class="fa-solid fa-bag-shopping"></i>portfolio</a>
