positioning menu to the right

--- a/index.html
+++ b/index.html
@@ -16,18 +16,20 @@
         <div class="logo">
             <a href="#"><img src="./assets/images/LogoMakr-76qr5p.png" alt="" srcset=""></a>
         </div>
-        <input type="checkbox" id="check">
-        <label for="check">
-            <i class="fa-solid fa-bars" id="btn"></i>
-            <i class="fa-solid fa-xmark" id="cancel"></i>
-        </label>
-        <div class="menu">
-            <header></header>
-            <a href="#"><i class="fa-solid fa-user"></i>about</a>
-            <a href="#"><i class="fa-solid fa-clone"></i>services</a>
-            <a href="#"><i class="fa-solid fa-bag-shopping"></i>portfolio</a>
-            <a href="#"><i class="fa-solid fa-screwdriver-wrench"></i></i>tools</a>
-            <a href="#"><i class="fa-solid fa-phone"></i>contact</a>
+        <div class="menubar">
+            <input type="checkbox" id="check">
+            <label for="check">
+                <i class="fa-solid fa-bars" id="btn"></i>
+                <i class="fa-solid fa-xmark" id="cancel"></i>
+            </label>
+            <div class="menu">
+                <header></header>
+                <a href="#"><i class="fa-solid fa-user"></i>about</a>
+                <a href="#"><i class="fa-solid fa-clone"></i>services</a>
+                <a href="#"><i class="fa-solid fa-bag-shopping"></i>portfolio</a>
+                <a href="#"><i class="fa-solid fa-screwdriver-wrench"></i></i>tools</a>
+                <a href="#"><i class="fa-solid fa-phone"></i>contact</a>
+            </div>
         </div>
     </div>
     
