top and bottom arrows

--- a/index.html
+++ b/index.html
@@ -24,29 +24,30 @@
             </label>
             <div class="menu">
                 <header></header>
-                <a href="#"><i class="fa-solid fa-user"></i>about</a>
-                <a href="#"><i class="fa-solid fa-clone"></i>services</a>
+                <a href="#hero-1"><i class="fa-solid fa-user"></i>about</a>
+                <a href="#services"><i class="fa-solid fa-clone"></i>services</a>
                 <a href="#"><i class="fa-solid fa-bag-shopping"></i>portfolio</a>
                 <a href="#"><i class="fa-solid fa-screwdriver-wrench"></i></i>tools</a>
-                <a href="#"><i class="fa-solid fa-phone"></i>contact</a>
+                <a href="#contact"><i class="fa-solid fa-phone"></i>contact</a>
             </div>
         </div>
     </div>
     
-    <div class="hero-1">
+    <div class="hero-1" id="hero-1">
         <div class="hero-1-cover">
-        <div class="content"> 
-            <h1>alozie <br> valentine chima</h1>
-            <p>Hello everyone! Am Alozie Valentine Chima. By the grace of God, am a Front-end Developer with unwavering understanding and implementation of responsive web applications. My obsession is building and developing digital experiences that beautifully functions, irrespective of the device in use. I am also a certified e-book publisher on Amazon to the glory of God</p>
-            <button> <a href="#">Get my cv</a></button>
-        </div>
-        <div class="my-image">
-            <img src="assets/images/my image.jpg" alt="">
-        </div>
+            <div class="content"> 
+                <h1>alozie <br> valentine chima</h1>
+                <p>Hello everyone! Am Alozie Valentine Chima. By the grace of God, am a Front-end Developer with unwavering understanding and implementation of responsive web applications. My obsession is building and developing digital experiences that beautifully functions, irrespective of the device in use. I am also a certified e-book publisher on Amazon to the glory of God</p>
+                <button> <a href="#">Get my cv</a></button>
+            </div>
+            <div class="my-image">
+                <img src="assets/images/my image.jpg" alt="">
+            </div>
+            <div class="bottom"><a href="#footer"><i class="fa-solid fa-arrow-down"></i></a></div>
         </div>
     </div>
 
-    <div class="services">
+    <div class="services" id="services">
         <h1><span></span>services<span></span></h1> 
         <div class="projects">
             <div class="social-icons">
@@ -70,7 +71,7 @@
         </div>
     </div>
 
-    <div class="contact">
+    <div class="contact" id="contact">
         <div class="contact-cover">
             <div class="contact-form">
                 <h2>Leave us a message</h2>
@@ -90,7 +91,7 @@
         </div>
     </div>
 
-    <div class="footer">
+    <div class="footer" id="footer">
         <div class="connect">
             <button><a href="#">contact developer<i class="fa-solid fa-arrow-right-long"></i></a></button>
             <div class="social-icons">
@@ -100,6 +101,7 @@
             </div>
         </div>
         <p><i class="fa-brands fa-gratipay"></i>2022 built by Alozie Valentine Chima</p>
+        <a class="top" href="#hero-1"><i class="fa-solid fa-arrow-up"></i></a>
     </div>
     <script src="main.js"></script>
 </body>
