update on services

--- a/index.html
+++ b/index.html
@@ -13,16 +13,16 @@
 </head>
 <body>
     <div class="nav">
-        <div class="logo">
+        <div class="logo" >
             <a href="#"><img src="./assets/images/LogoMakr-76qr5p.png" alt="" srcset=""></a>
         </div>
-        <div class="menubar">
+        <div class="menubar" id="menu">
             <input type="checkbox" id="check">
             <label for="check">
                 <i class="fa-solid fa-bars" id="btn"></i>
                 <i class="fa-solid fa-xmark" id="cancel"></i>
             </label>
-            <div class="menu">
+            <div class="menu" >
                 <header></header>
                 <a href="#hero-1"><i class="fa-solid fa-user"></i>about</a>
                 <a href="#services"><i class="fa-solid fa-clone"></i>services</a>
@@ -49,6 +49,11 @@
 
     <div class="services" id="services">
         <h1><span></span>services<span></span></h1> 
+        <div class="project-samples">
+            <div><img src="assets/images/landing-page-minimal-style-art-gallery-with-man_23-2148821375.webp" alt="" srcset=""><h5>Landing Page Sample Design</h5></div>
+            <div><img src="assets/images/51EM67nu5TL.webp" alt="" srcset=""><h5><button><a href="#">Buy On Amazon</a></button></h5></div>
+            <div><img src="assets/images/beautiful-nature-landing-page-template_52683-60654.webp" alt="" srcset=""><h5>Web Template Sample Design</h5></div>
+        </div>
         <div class="projects">
             <div class="social-icons">
                 <a href="https://www.facebook.com/valentine.goodnews.1"><i class="fa-brands fa-facebook"></i></a>
@@ -61,13 +66,14 @@
                 <button><a href="#">connect with me</a></button>
             </div>
             <div class="content">
-                <h2>web design and <br> development</h2>
-                <p>With ample years of experience in areas of <br> design, I develop and deliver beautiful and <br> highly scalable web applications that functions <br> well across multiple device.</p>
-            </div>
-            <div class="content">
                 <h2>Book Publishing</h2>
                 <p>I also write, edit, proofread, sets up <br> manuscripts and publish attractrively <br> designed e-books on Amazon </p>
             </div>
+            <div class="content">
+                <h2>web design and <br> development</h2>
+                <p>With ample years of experience in areas of <br> design, I develop and deliver beautiful and <br> highly scalable web applications that functions <br> well across multiple device.</p>
+            </div>
+            
         </div>
     </div>
 
