--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <div class="services" id="services">
         <h1><span></span>services<span></span></h1> 
         <div class="project-samples">
-            <div><img src="assets/images/Screenshot 2022-09-04 131916.png" alt="" srcset=""><h5>Landing Page Sample Design</h5></div>
+            <div><img src="assets/images/horizontal-banner-template-black-friday-clearance_23-2148745446.webp" alt="" srcset=""><h5>Landing Page Sample Design</h5></div>
             <div><img src="assets/images/51EM67nu5TL.webp" alt="" srcset=""><h5><button><a href="#">Buy On Amazon</a></button></h5></div>
             <div><img src="assets/images/beautiful-nature-landing-page-template_52683-60654.webp" alt="" srcset=""><h5>Web Template Sample Design</h5></div>
         </div>
